# openmax-hacks

./: .gitignore  OWNERS  README.md  codereview.settings
dl/: .gitignore  BUILD.gn  ckfft.gyp  dl.gyp  ffmpeg.gyp  pffft.gyp
dl/Ne10/common/: NE10_mask_table.h
dl/ckfft-1.0/doc/: changes.txt  manual.html
dl/ckfft-1.0/src/ckfft/: fft_neon.cpp
dl/kiss_fft130/: kiss_fft_bfly2_neon.S
dl/sp/src/: omxSP_FFTFwd_RToCCS_F32_Sfs_s.S  omxSP_FFTInv_CCSToR_F32_Sfs_s.S
dl/sp/src/test/: .gitignore  fft_time_ckfft.c  fft_time_ckfft.h  fft_time_ffmpeg.c  fft_time_ffmpeg.h  fft_time_kissfft.c  fft_time_kissfft.h  fft_time_ne10.c  fft_time_ne10.h  fft_time_openmax.c  fft_time_pffft.c  test_fft.gyp  test_fft_time.c  test_fft_time.gyp  test_util.c  timing_util.h
tools/android/: README.webrtc  android_tools_precompiled.gyp
tools/android-dummy-test/: README.webrtc  android_dummy_test.gyp
tools/android-dummy-test/simple_apk/: simple-debug.apk  simple-unsigned.apk
tools/android/linux/: host_forwarder  md5sum_bin_host
tools/android/mac/: host_forwarder  md5sum_bin_host
tools/android/target-arm/md5sum_dist/: md5sum_bin
tools/android/target-ia32/md5sum_dist/: md5sum_bin  md5sum_bin_host
